# handwriting-synthesis

./: config.py  main.py  pyproject.toml  requirements.txt  setup.py
handwriting_synthesis/hand/: _draw.py
