[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[project]
name = "card_writer"
version="0.0.1"
authors =[
    {name="Chad Jemmett", email="chad.jemmett@gmail.com"},
    {name="Sean Vasquez", email="https://github.com/sjvasquez"},
    {name="Onur Alp Akin", email="onralpakin@gmail.com"},
]

description="An app to write postcards with a plotter"
readme="README.md"
requires-python="3.11"

